added script and style enqueues

--- a/style.css
+++ b/style.css
@@ -11,3 +11,5 @@ License URI: LICENSE
 Text Domain: boilerplate-slug
 Tags: custom-menu, custom-logo, custom-post-types, editor-style, featured-images, footer-widgets, rtl-language-support, multi-language
 */
+
+/* Custom GB Styles */
