--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -1,9 +1,8 @@
-$main-clr: #00525e;
+$main-clr: #59384f;
 
-$light: white;
+$light: #ffffff;
 $mid: #ebecf1;
-$light-grey: #7d7e80;
-$grey: #4d4f4e;
+$dark: #4d4f4e;
 
 $desktop: 1280px;
 $tablet: 768px;
