--- a/src/stylesheets/partials/_wordpress.scss
+++ b/src/stylesheets/partials/_wordpress.scss
@@ -1,3 +1,6 @@
+// Elements from WordPress
+
+// Color from theme support 'editor-color-palette' inside functions.php
 // $colors: (
 //   "boilerplate-slug-main": $main-clr,
 //   "boilerplate-slug-mid": $mid
