--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap");
-
 @import "modules/variables";
 @import "modules/mixins";
 @import "modules/keyframes";
@@ -24,7 +22,7 @@ main {
 }
 body {
   background-color: $mid;
-  font-family: "Montserrat", sans-serif;
+  font-family: $main-font;
   &.browser-warning {
     main {
       background: orange;
