--- a/src/stylesheets/modules/_variables.scss
+++ b/src/stylesheets/modules/_variables.scss
@@ -14,4 +14,4 @@ $tablet: 768px;
 $mobile: 480px;
 
 // Font-Family imported on top:
-$main-font: $main-font;
+$main-font: "Montserrat", sans-serif;
