removed unused package

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-Theme Name: Josias Ribi Boilerplate
+Theme Name: Theme Boilerplate by josias-r
 Theme URI: https://wordpress.org/themes/boilerplate-slug-oder-so/
 Author: Josias Ribi
 Author URI: https://josias.me/
