--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -55,6 +55,7 @@ main {
         > .alignfull {
           margin-left: calc(50% - 50vw);
           width: 100vw;
+          // override for WordPress blocks
           max-width: 100vw;
         }
         $wide-offset: 50px;
@@ -62,6 +63,8 @@ main {
           margin-left: -$wide-offset;
           margin-right: -$wide-offset;
           width: calc(100% + #{2 * $wide-offset});
+          // override for WordPress blocks
+          max-width: calc(100% + #{2 * $wide-offset});
         }
       }
     }
