adopted the wordpress-extra coding standard

--- a/style.css
+++ b/style.css
@@ -12,4 +12,4 @@ Text Domain: boilerplate-slug
 Tags: custom-menu, custom-logo, custom-post-types, editor-style, featured-images, footer-widgets, rtl-language-support, multi-language
 */
 
-/* Custom GB Styles */
+/* This stylesheet is not included/used by default and only for theme declaration purposes. */
